중간 발표 버전